[package]
authors = ["Taryn Hill <taryn@phrohdoh.com>"]
license = "MIT"
name = "easage"
version = "0.0.2"
include = ["src/**/*.rs", "Cargo.toml"]
description = "Programmatic manipulation of Electronic Art's BIG format"
repository = "https://github.com/Phrohdoh/easage"
# documentation = "https://docs.rs/easage/"

[[bin]]
doc = false
name = "easage"
path = "src/bin/easage.rs"
required-features = ["clap"]

[dependencies]
byteorder = "1.1.0"
failure = "0.1.1"
memmap = "0.5.2"
owning_ref = "0.3.3"
walkdir = "1"

[dependencies.clap]
optional = true
version = "2.26"
